# C_Projects

Libft/: Makefile  README.md  ft_bzero.c  ft_calloc.c  ft_isalpha.c  ft_isascii.c  ft_itoa.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memset.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_split.c  ft_striteri.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_toupper.c
ft_printf/: Makefile  ft_libnbr.c  ft_printf.c  ft_printf.h
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
libft/: ft_atoi.c  ft_isalnum.c  ft_isdigit.c  ft_isprint.c  ft_lstadd_back.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_tolower.c  libft.h
minishell/: access_dir.c  exec_start.c  free_utils.c  main.c  minishell  minishell.c
philosophers/: CMakeLists.txt  Makefile  actions.c  free.c  init.c  philo.c  philo.h  print.c  utils.c
pipex/: Makefile  find_path.c  pipex.c  pipex.h  put_fd.c  split_func.c  utils_func.c  utils_func_two.c
push_swap/: CMakeLists.txt  Makefile  checker  free_func.c  init_stack_func.c  manipulation_func.c  push_func.c  push_swap  push_swap.c  push_swap.h  small_sort_func.c  sort_func.c  sort_rules_part_one.c  sort_rules_part_two.c  utils_func.c  validate_func.c
so_long/: Makefile  ft_split.c  map_funcs.c  move_funcs.c  put_fd.c  so_long  (+3 more)
(+6 files in other folders)
